--- a/src/components/Activities/TabList/index.module.scss
+++ b/src/components/Activities/TabList/index.module.scss
@@ -26,7 +26,7 @@
     color: $text-highlight;
   }
 
-  @include down($breakpoint-xs) {
+  @include down($breakpoint-sm) {
     border-left: none;
     border-bottom: solid 2px $background-light2;
   }
@@ -38,7 +38,7 @@
   border-left: solid 3px $text-highlight;
   transition: border-left 0.25s;
 
-  @include down($breakpoint-xs) {
+  @include down($breakpoint-sm) {
     border-left: none;
     border-bottom: solid 3px $text-highlight;
   }
