--- a/src/components/Activities/index.module.scss
+++ b/src/components/Activities/index.module.scss
@@ -7,11 +7,14 @@
   justify-content: center;
   color: $text-primary;
   padding-top: 20rem;
-  margin-left: 30%;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 20rem;
+
   @include down($breakpoint-md) {
     width: 90%;
-    margin: 0 auto;
+    margin-bottom: 5rem;
   }
 }
 
@@ -19,13 +22,16 @@
   font-size: 2rem;
   font-weight: bold;
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .content {
   margin-top: 2rem;
   display: flex;
   gap: 1rem;
-  @include down($breakpoint-xs) {
+  padding-left: 10%;
+  @include down($breakpoint-sm) {
     flex-direction: column;
   }
 }
