--- a/src/components/Portfolio/Project/index.module.scss
+++ b/src/components/Portfolio/Project/index.module.scss
@@ -11,7 +11,7 @@
   @include up($breakpoint-md) {
     &:nth-child(odd) {
       grid-template-columns: 4fr 3fr;
-      text-align: end;
+      text-align: start;
   
       & .projectImage {
         grid-column: 1 / 1;
@@ -20,13 +20,13 @@
       & .projectContent {
         grid-column: 2 / 2;
         margin-left: 1rem;
-        align-items: flex-end;
+        align-items: flex-start;
       }
     }
   
     &:nth-child(even) {
       grid-template-columns: 3fr 4fr;
-      text-align: start;
+      text-align: end;
   
       & > .projectImage {
         grid-column: 2 / 2;
@@ -35,36 +35,41 @@
       & > .projectContent {
         grid-column: 1 / 1;
         margin-right: 1rem;
-        align-items: flex-start;
+        align-items: flex-end;
       }
     }
   }
 
-  @include down($breakpoint-md) {
+  @include between($breakpoint-sm, $breakpoint-md) {
     width: 80%;
 
     & > div {
       grid-template-columns: 1fr;
       grid-template-rows: 4fr 3fr;
-      text-align: start;
+      text-align: center;
+    }
 
-      & .projectImage {
-        grid-row: 1 / 1;
-        grid-column: 1 / 1;
-      }
+    .projectImage {
+      grid-row: 1 / 1;
+      grid-column: 1 / 1;
+    }
 
-      & .projectContent {
-        grid-row: 2 / 2;
-        grid-column: 1 / 1;
-        margin-left: 0;
-        margin-right: 0;
-      }
+    .projectContent {
+      grid-row: 2 / 2;
+      grid-column: 1 / 1;
+      margin-left: 0;
+      margin-right: 0;
+      margin-top: 2rem;
     }
   }
 
-  @include down($breakpoint-xs) {
+  @include down($breakpoint-sm) {
+    width: 80%;
+
     & > div {
+      grid-template-columns: 1fr;
       grid-template-rows: 1fr;
+      justify-items: center;
 
       & .projectImage {
         display: none;
@@ -72,9 +77,12 @@
   
       & .projectContent {
         grid-row: 1 / 1;
+        grid-column: 1 / 1;
+        margin-top: 2rem;
       }
     }
   }
+
 }
 
 .imageContainer {
@@ -100,10 +108,6 @@
 
   @include down($breakpoint-md) {
     text-align: center;
-  }
-
-  @include down($breakpoint-xs) {
-    width: 90%;
   }
 }
 
