--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -2,7 +2,7 @@
 
 $breakpoint-xs: 0px;
 $breakpoint-sm: 600px;
-$breakpoint-md: 900px;
+$breakpoint-md: 950px;
 $breakpoint-lg: 1200px;
 $breakpoint-xl: 1536px;
 
@@ -14,6 +14,12 @@ $breakpoint-xl: 1536px;
 
 @mixin down($screen) {
   @media (max-width: $screen) {
+    @content;
+  }
+}
+
+@mixin between($min-width, $max-width) {
+  @media (min-width: $min-width) and (max-width: $max-width) {
     @content;
   }
 }
